[package]
name = "RustSyncCV-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.6", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.16"
rustls = "0.21"
tokio-rustls = "0.24"
uuid = { version = "1", features = ["v4"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.2"
axum-server = { version = "0.5", features = ["tls-rustls"] }
toml = "0.9.7"
