[package]
name = "RustSyncCV-Server"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws", "headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.16"
uuid = { version = "1", features = ["v4"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.2"
axum-server = "0.5"
toml = "0.9.7"
cargo-zigbuild = "0.20.1"
